--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best web software</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-5" data-rv-view="17" style="background-image: url(assets/images/p1000427-1999x1501.jpg);">
+<section class="engine"><a href="https://mobirise.ws/b">best website creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-5" data-rv-view="17" style="background-image: url(assets/images/p1000427-1999x1501.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -109,12 +109,12 @@
     <div class="mbr-figure__map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJQQ_Zy5f3aS4RY_9ETp7VRW4" allowfullscreen=""></iframe></div>
 </figure>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-8" data-rv-view="28" style="background-color: rgb(60, 60, 60);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-8" data-rv-view="28" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
             <div class="col-sm-4">
-                <div><img src="assets/images/footer-logo.png" class="mbr-contacts__img mbr-contacts__img--left"></div>
+                <div><img src="assets/images/1-200x201.jpg" class="mbr-contacts__img mbr-contacts__img--left"></div>
             </div>
             <div class="col-sm-8">
                 <div class="row">
@@ -128,7 +128,7 @@ Email: pr@springfield.sch.id<br>
 Phone: +622158357830<br>
 Fax: +62215818902</p>
                     </div>
-                    <div class="col-sm-4"><p class="mbr-contacts__text"><strong>LINKS</strong></p><ul class="mbr-contacts__list"><li><a href="http://www.springfield.sch.id/" target="_blank" class="text-gray">Springfield's Site</a></li><li><a href="https://twitter.com/sfschooljkt" target="_blank" class="text-gray">Twitter</a></li><li><a href="https://www.facebook.com/sfsjakarta/" class="text-gray">Facebook</a></li><li><a href="https://www.instagram.com/springfield.school/" target="_blank" class="text-gray">Instagram</a></li><li><br></li><li><br></li></ul></div>
+                    <div class="col-sm-4"><p class="mbr-contacts__text"><strong>LINKS</strong></p><ul class="mbr-contacts__list"><li><a href="http://www.springfield.sch.id/" target="_blank" class="text-primary">Springfield's Site</a></li><li><a href="https://twitter.com/sfschooljkt" target="_blank" class="text-primary">Twitter</a></li><li><a href="https://www.facebook.com/sfsjakarta/" class="text-primary">Facebook</a></li><li><a href="https://www.instagram.com/springfield.school/" target="_blank" class="text-primary">Instagram</a></li><li><br></li><li><br></li></ul></div>
                 </div>
             </div>
         </div>
