--- a/page4.html
+++ b/page4.html
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/q">web page builder download</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="msg-box3-o" data-rv-view="87" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.ws/a">best free website builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="msg-box3-o" data-rv-view="87" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -226,12 +226,12 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-n" data-rv-view="86" style="background-color: rgb(60, 60, 60);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-n" data-rv-view="86" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
             <div class="col-sm-4">
-                <div><img src="assets/images/footer-logo.png" class="mbr-contacts__img mbr-contacts__img--left"></div>
+                <div><img src="assets/images/1-200x201.jpg" class="mbr-contacts__img mbr-contacts__img--left"></div>
             </div>
             <div class="col-sm-8">
                 <div class="row">
@@ -245,7 +245,7 @@ Email: pr@springfield.sch.id<br>
 Phone: +622158357830<br>
 Fax: +62215818902</p>
                     </div>
-                    <div class="col-sm-4"><p class="mbr-contacts__text"><strong>LINKS</strong></p><ul class="mbr-contacts__list"><li><a href="http://www.springfield.sch.id/" target="_blank" class="text-gray">Springfield's Site</a></li><li><a href="https://twitter.com/sfschooljkt" target="_blank" class="text-gray">Twitter</a></li><li><a href="https://www.facebook.com/sfsjakarta/" class="text-gray">Facebook</a></li><li><a href="https://www.instagram.com/springfield.school/" target="_blank" class="text-gray">Instagram</a></li><li><br></li><li><br></li></ul></div>
+                    <div class="col-sm-4"><p class="mbr-contacts__text"><strong>LINKS</strong></p><ul class="mbr-contacts__list"><li><a href="http://www.springfield.sch.id/" target="_blank" class="text-primary">Springfield's Site</a></li><li><a href="https://twitter.com/sfschooljkt" target="_blank" class="text-primary">Twitter</a></li><li><a href="https://www.facebook.com/sfsjakarta/" class="text-primary">Facebook</a></li><li><a href="https://www.instagram.com/springfield.school/" target="_blank" class="text-primary">Instagram</a></li><li><br></li><li><br></li></ul></div>
                 </div>
             </div>
         </div>
