--- a/page2.html
+++ b/page2.html
@@ -29,14 +29,14 @@
 
             <div class="navbar-brand">
                 
-                <a class="text-black" href="https://mobirise.com">MUSIC ELECTIVE</a>
+                <a class="text-black" href="index.html">MUSIC ELECTIVE</a>
             </div>
 
             <button class="navbar-toggler pull-xs-right hidden-md-up" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="page2.html">About the Program</a><a class="dropdown-item" href="https://mobirise.com/">About the Teacher</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">Musicals</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="page3.html">Mamma Mia!</a><a class="dropdown-item" href="page4.html">Sound of Music</a></div></div><a class="dropdown-item" href="https://mobirise.com/"></a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Students' Opinions</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum</a><a class="dropdown-item" href="https://mobirise.com/">Tutorials</a><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="page2.html">About the Program</a><a class="dropdown-item" href="https://mobirise.com/">About the Teacher</a><div class="dropdown open"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">Musicals</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="page3.html">Mamma Mia!</a><a class="dropdown-item" href="page4.html">Sound of Music</a></div></div><a class="dropdown-item" href="https://mobirise.com/"></a><a class="dropdown-item" href="https://mobirise.com/" aria-expanded="false">Students' Opinions</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum</a><a class="dropdown-item" href="https://mobirise.com/">Tutorials</a><a class="dropdown-item" href="https://mobirise.com/">Contact us</a></div></li></ul>
 
         </div>
 
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best website development software</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-after-navbar" id="gallery1-j" data-rv-view="48" style="background-color: rgb(76, 105, 114);">
+<section class="engine"><a href="https://mobirise.ws/i">build own website</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-after-navbar" id="gallery1-j" data-rv-view="48" style="background-color: rgb(76, 105, 114);">
     <!-- Gallery -->
     <div class=" mbr-gallery-layout-default">
         <div>
