--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">html site creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-5" data-rv-view="694" style="background-image: url(assets/images/p1000427-1999x1501.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left mbr-after-navbar">
+<section class="engine"><a href="https://mobirise.ws/l">html site builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-5" data-rv-view="694" style="background-image: url(assets/images/p1000427-1999x1501.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-left">
